--- a/resume/technology-manager.html
+++ b/resume/technology-manager.html
@@ -10,12 +10,18 @@
 		<dt>Sigma Breakthrough Technologies, San Marcos, TX</dt>
 				<dd>
 					<em>Technology Manager</em>
-					<strong>Jan 2013 –  Present</strong>
-					&bull; Maintained new customer account base for their first 60 days as a Rackspace Cloud Customer.</br>
-					&bull; Achieved Net Promoter Score of 78 across customer base for 2016.</br>
-					&bull; Fulfilled 100% closed loop responses for customer service level agreements.</br>
-					&bull; Provided Fanatical Support to customers and Rackers via phone, chat, and tickets.</br>
-					&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.</br>
+					<strong>Apr 2002 –  Dec 2011</strong>
+					&bull; Captured over $2,000,000 of intellectual property using virtual machines.
+					&bull; Eliminated $5,000 per year maintenance agreement using virtual machines.
+					&bull; Eliminated 99.9% risk of outmoded hardware failure using virtual machines.
+					&bull; Protected over $100,000 of intellectual property in one chartered project.
+					&bull; Deployed $30,000 enterprise-class server for corporate ERP solution.
+					&bull; Increased phone/voicemail capacity by 50% by installing new system.
+					&bull; Managed an audio/video team at four annual customer conferences.
+					&bull; Sold $140,000 in packaged software by communicating product benefits.
+					&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.
+					&bull; Streamed 200+ hours of e-Learning content using L.M.S.
+					&bull; Achieved over 12,500 views on YouTube© through video case studies.
 				</dd>
 	</dl>	 
 </body>
