--- a/resume/technology-manager.html
+++ b/resume/technology-manager.html
@@ -11,17 +11,17 @@
 				<dd>
 					<em>Technology Manager</em>
 					<strong>Apr 2002 –  Dec 2011</strong>
-					&bull; Captured over $2,000,000 of intellectual property using virtual machines.
-					&bull; Eliminated $5,000 per year maintenance agreement using virtual machines.
-					&bull; Eliminated 99.9% risk of outmoded hardware failure using virtual machines.
-					&bull; Protected over $100,000 of intellectual property in one chartered project.
-					&bull; Deployed $30,000 enterprise-class server for corporate ERP solution.
-					&bull; Increased phone/voicemail capacity by 50% by installing new system.
-					&bull; Managed an audio/video team at four annual customer conferences.
-					&bull; Sold $140,000 in packaged software by communicating product benefits.
-					&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.
-					&bull; Streamed 200+ hours of e-Learning content using L.M.S.
-					&bull; Achieved over 12,500 views on YouTube© through video case studies.
+					&bull; Captured over $2,000,000 of intellectual property using virtual machines.</br>
+					&bull; Eliminated $5,000 per year maintenance agreement using virtual machines.</br>
+					&bull; Eliminated 99.9% risk of outmoded hardware failure using virtual machines.</br>
+					&bull; Protected over $100,000 of intellectual property in one chartered project.</br>
+					&bull; Deployed $30,000 enterprise-class server for corporate ERP solution.</br>
+					&bull; Increased phone/voicemail capacity by 50% by installing new system.</br>
+					&bull; Managed an audio/video team at four annual customer conferences.</br>
+					&bull; Sold $140,000 in packaged software by communicating product benefits.</br>
+					&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.</br>
+					&bull; Streamed 200+ hours of e-Learning content using L.M.S.</br>
+					&bull; Achieved over 12,500 views on YouTube© through video case studies.</br>
 				</dd>
 	</dl>	 
 </body>
