--- a/resume/technology-director.html
+++ b/resume/technology-director.html
@@ -9,13 +9,10 @@
 	<dl>
 		<dt>SkillMaster, Houston, TX</dt>
 				<dd>
-					<em>Technology Director</em>
-					<strong>Jan 2013 –  Present</strong>
-					&bull; Maintained new customer account base for their first 60 days as a Rackspace Cloud Customer.</br>
-					&bull; Achieved Net Promoter Score of 78 across customer base for 2016.</br>
-					&bull; Fulfilled 100% closed loop responses for customer service level agreements.</br>
-					&bull; Provided Fanatical Support to customers and Rackers via phone, chat, and tickets.</br>
-					&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.</br>
+					<em>Director of Technology</em>
+					<strong>Jan 2000 - Feb 2002</strong>
+					&bull; Moved 200+ email accounts to MS Exchange© in under 30 days.</br>
+					&bull; Reduced website budget by 90% though the use of open source tools.</br>
 				</dd>
 	</dl>	 
 </body>
