--- a/resume/network-specialist.html
+++ b/resume/network-specialist.html
@@ -10,12 +10,7 @@
 		<dt>Sterling Bank, Houston, TX</dt>
 				<dd>
 					<em>Network Specialist</em>
-					<strong>Jan 2013 –  Present</strong>
-					&bull; Maintained new customer account base for their first 60 days as a Rackspace Cloud Customer.</br>
-					&bull; Achieved Net Promoter Score of 78 across customer base for 2016.</br>
-					&bull; Fulfilled 100% closed loop responses for customer service level agreements.</br>
-					&bull; Provided Fanatical Support to customers and Rackers via phone, chat, and tickets.</br>
-					&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.</br>
+					<strong>June 1999 - Jan 2000</strong>
 				</dd>
 	</dl>	 
 </body>
