--- a/resume/technology-manager.html
+++ b/resume/technology-manager.html
@@ -22,6 +22,7 @@
 					&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.</br>
 					&bull; Streamed 200+ hours of e-Learning content using L.M.S.</br>
 					&bull; Achieved over 12,500 views on YouTube© through video case studies.</br>
+					&bull; Reduced website budget by 90% though the use of open source tools.</br>
 				</dd>
 	</dl>	 
 </body>
