--- a/resume/rackspace.html
+++ b/resume/rackspace.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bill Hertzing | Cloud Launch Manager</title>
+  <title>Bill Hertzing | Technical Account Manager</title>
 <style type="text/css">
 
 
@@ -632,7 +632,7 @@ dl em {
 	<div class="container">
 		<div class="resume">
 			<h1>Bill Hertzing</h1>
-			<h2>Cloud Launch Manager</h2>
+			<h2>Technical Account Manager</h2>
 
 			<blockquote>
 			  <p><a href="http://blogimages.billhertzing.com/bill_hertzing_resume.pdf" target="_blank">Download 1-page (.pdf)</a><br />	
