--- a/resume/rackspace.html
+++ b/resume/rackspace.html
@@ -636,8 +636,8 @@ dl em {
 
 			<blockquote>
 			  <p><a href="http://blogimages.billhertzing.com/bill_hertzing_resume.pdf" target="_blank">Download 1-page (.pdf)</a><br />	
-			  bill@hertzing.com | billhertzing.com<br />
-			  +1 (512) 394-3556<br /></p>
+			  bill.hertzing@rackspace.com<br />
+			  +1 (210) 312-2580<br /></p>
 			</blockquote>
 			<hr />
 				<div id="objective-statement">
