--- a/resume/rackspace.html
+++ b/resume/rackspace.html
@@ -646,6 +646,11 @@ dl em {
 					</script>
 				</div>
 			<hr />
+				<div id="senior-technical-account-manager">
+					<script>
+					$( "#senior-technical-account-manager" ).load( "senior-technical-account-manager.html" );
+					</script>
+				</div>
 				<div id="launch-manager">
 					<script>
 					$( "#launch-manager" ).load( "launch-manager.html" );
