--- a/resume/senior-technical-account-manager.html
+++ b/resume/senior-technical-account-manager.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>technical-account-manager</title>
+	<title>senior-technical-account-manager</title>
 </head>
 <body>
 <h3></h3>
 	<dl>
 		<dt>Rackspace, San Antonio, TX</dt>
 				<dd>
-					<em>Technical Account Manager</em>
-					<strong>July 2012 –  Jan 2013</strong>
-					&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.</br>
+					<em>Senior Technical Account Manager</em>
+					<strong>February 2017 –  Present</strong>
+					&bull; Over 120 accounts worth $700k MRR.</br>
 				</dd>
 	</dl>	 
 </body>
