--- a/resume/senior-technical-account-manager.html
+++ b/resume/senior-technical-account-manager.html
@@ -5,7 +5,7 @@
 	<title>senior-technical-account-manager</title>
 </head>
 <body>
-<h3></h3>
+<h3>Achievements</h3>
 	<dl>
 		<dt>Rackspace, San Antonio, TX</dt>
 				<dd>
