Added Sr. TAM role

--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -670,7 +670,8 @@ ITIL® Foundation Certificate in IT Service Management | CSME, Inc. | November 2
 <h3 id="experience">Experience</h3>
 
 <ol>
-Rackspace, San Antonio, TX | Cloud Launch Manager | Jan 2013 –  Present<br>
+Rackspace, San Antonio, TX | Senior Technical Account Manager | Feb 2017 - Present<br>
+Rackspace, San Antonio, TX | Cloud Launch Manager | Jan 2013 –  Feb 2017<br>
 Rackspace, San Antonio, TX | Technical Account Manager | July 2012 – Jan 2013<br>
 Rackspace, San Antonio, TX | Windows Administrator | Feb 2012 – July 2012<br>
 SBTI, San Marcos, TX | Technology Manager | 2002 – 2011
