Update contact info

--- a/resume/rax-pdf.html
+++ b/resume/rax-pdf.html
@@ -641,8 +641,8 @@ dl em {
     <div class="resume">
 <table style="width: 100%;" border="0">
   <tr>
-    <td valign="top"><b><span class="bill">Bill Hertzing</b><br>Cloud Launch Manager</class="bill"></td>
-    <td valign="top" align="right">bill@hertzing.com<br>billhertzing.com<br>+1 (512) 394-3556</td>
+    <td valign="top"><b><span class="bill">Bill Hertzing</b><br>Senior Technical Account Manager</class="bill"></td>
+    <td valign="top" align="right">bill.hertzing@rackspace.com<br>+1 (210) 312-2580</td>
   </tr>
 </table>
 
