Added more songs

--- a/mastering-the-mix.html
+++ b/mastering-the-mix.html
@@ -66,8 +66,11 @@
 You use the software to manipulate the waveform.  That means either expanding it or compressing it or processing it through an EQ, for example. 
 I am posting these as I find them and adding my own personal notes. I will updated this page as I find more examples and figure out how to apply them. </p>
 <h2>Horns</h2>
-<p>Paquito D'Rivera - Portraits of Cuba - "La Bella Cubana" – This sound is very similar to Session Horns.  Good dynamics and stereo separation. Horns express loud and soft throughout the song.  Percussive use of a shaker as well.  Mix of Latin drums.  Upright bass. <br />
+<p>Paquito D'Rivera - Portraits of Cuba - "La Bella Cubana" – This sound is very similar to Session Horns.  Good dynamics and stereo separation. Horns express loud and soft throughout the song.  Percussive use of a shaker as well.  Mix of Latin drums.  Upright bass.   Digido.com Notes: "Engineered and Mastered by Bob Katz. Big Band Latin Jazz. A bit bright, but extremely natural. Recorded with minimalist miking. Turn it up! Chesky Records, JD145, ©1996. +2 dB"
 <iframe width="560" height="315" src="https://www.youtube.com/embed/O8cT7J3ULio?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+<h2>Open Air</h2>
+<p>Body and Soul - Joe Jackson - The Verdict - Track uses a lot of reverb on the drums.   Lots of space betweent the notes.  Vocals are on par with horns in terms of loudness.  Very compressed on the top-end compared to modern recordings.  Digido.com notes: "Mastered by Bernie Grundman. Engineered by Rik Pekkonen. The slightly harsh high end reflects synthesizers and A/Ds of the period, but the sound is open and marvelous. It’s moderately compressed at the top for effect, with great dynamic range. A&amp;M Records, CD-3286, ©1984. 0dB"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/R6bWj7UYeaw?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
 <h2>Conclusion</h2>
 <h2>Have a comment?</h2>
 <p>So, what do you think? Did I miss anything?  Is any part unclear?</p>
