--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -9,16 +9,16 @@
 	<dl>
 		<dt>Support</dt>
 				<dd>
-					&bull; Maintained new customer account base for their first 60 days as a Rackspace Cloud Customer.</br>
+					&bull; Processed billing for top Rackspace account with $1.8M MRR.</br>
 					&bull; Achieved Net Promoter Score of 78 across customer base for 2016.</br>
 					&bull; Fulfilled 100% closed loop responses for customer service level agreements.</br>
-					&bull; Provided Fanatical Support to customers and Rackers via phone, chat, and tickets.</br>
-					&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.</br>
+					&bull; Provided Fanatical Support to customers and Rackers via Teams & phone.</br>
+					&bull; Advised nationally syndicated cloud accounts in handling over 140k hits/min.</br>
 				</dd>
 		<dt>Disaster Recovery, Backup and Retention</dt>
 				<dd>
 					&bull; Captured over $2,000,000 of intellectual property using virtual machines.</br>
-					&bull; Eliminated $5,000 per year maintenance agreement using virtual machines.</br>
+					&bull; Reduced CSM's burden by developing Credit Calculator for Cloud.</br>
 					&bull; Eliminated 99.9% risk of outmoded hardware failure using virtual machines.</br>
 					&bull; Advised customers on backup and recovery using 100% cloud services.</br>
 					&bull; Protected over $100,000 of intellectual property in one chartered project.</br>
@@ -32,7 +32,7 @@
 				</dd>
 		<dt>Sales and Marketing</dt>
 				<dd>
-					&bull; Sold $140,000 in packaged software by communicating product benefits.</br>
+					&bull; Work closely with sales to ensure customer expectations and outcomes are met.</br>
 					&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.</br>
 					&bull; Attended two Rackspace::SOLVE events engaging with over 30 attendees per event.</br>
 				</dd>
