--- a/resume/index-old-feb-2022.html
+++ b/resume/index-old-feb-2022.html
@@ -632,9 +632,10 @@ dl em {
 	<div class="container">
 		<div class="resume">
 			<h1>Bill Hertzing</h1>
-			<h2>Senior Customer Success Manager</h2>
+			<h2>Cloud Launch Manager</h2>
 
 			<blockquote>
+			  <p><a href="http://blogimages.billhertzing.com/bill_hertzing_resume.pdf" target="_blank">Download 1-page (.pdf)</a><br />	
 			  bill@hertzing.com | billhertzing.com<br />
 			  +1 (512) 394-3556<br /></p>
 			</blockquote>
@@ -655,9 +656,9 @@ dl em {
 				<ol>
 					<li>Cloud Servers</li>
 					<li>Desktop Support</li>
-					<li>Enterprise Technology</li>
-					<li>Project Management</li>
-					<li>Migraion Coordination</li>
+					<li>Web design</li>
+					<li>Markdown</li>
+					<li>Server Administration</li>
 					<li>Customer Support</li>
 				</ol>
 			<hr />
@@ -690,15 +691,9 @@ dl em {
 			<hr />
 			<h3 id="experience">Experience</h3>
 			<dl>
-                                <dt>Rackspace US, Inc.</dt>
-                                        <dd><em>Senior Customer Success Manager</em>
-                                        <strong>Feb 2021 –  Present</strong>
-                                <dt>Rackspace US, Inc.</dt>
-                                        <dd><em>Senior Technical Account Manager</em>
-                                        <strong>Feb 2017 – Feb 2021</strong>
 				<dt>Rackspace US, Inc.</dt>
 					<dd><em>Cloud Launch Manager</em>
-					<strong>Jan 2013 – Feb 2017</strong>
+					<strong>Jan 2013 –  Present</strong>
 				<dt>Rackspace US, Inc.</dt>
 					<dd><em>Technical Account Manager</em>
 					<strong>July 2012 – Jan 2013</strong>
@@ -708,6 +703,12 @@ dl em {
 				<dt>SBTI, San Marcos, TX</dt>
 					<dd><em>Technology Manager</em>
 					<strong>2002 – 2011</strong>
+				<dt>SkillMaster, Inc., Houston, TX</dt>
+					<dd><em>Director of Technology</em>
+					<strong>2000 – 2002</strong>
+				<dt>Sterling Bank, Houston, TX</dt>
+					<dd><em>Network Specialist</em>
+					<strong>1999 – 2000</strong>
 				</dd>
 			</dl>
 		</div>
