--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -7,7 +7,21 @@
 <body>
 <h3>Achievements</h3>
 	<dl>
-		<dt>Support</dt>
+		<dt>Sales and Marketing</dt>
+				<dd>
+					&bull; Facilitated 12 cohorts per year with 10-15 students in each cohort.</br>
+					&bull; Work closely with sales to ensure customer expectations and outcomes are met.</br>
+					&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.</br>
+					&bull; Attended two Rackspace::SOLVE events engaging with over 30 attendees per event.</br>
+				</dd>
+		<dt>Content Creation and Delivery</dt>
+				<dd>
+					&bull; Published to Mindtickle Customer Success and Seller content monthly.</br>
+					&bull; Developed & presented training about Cloud Launch to over 150 Rackers.</br>
+					&bull; Created 11+ screencasts to assist with Cloud customer onboarding.</br>
+					&bull; Streamed 200+ hours of e-Learning content using L.M.S.</br>
+					&bull; Achieved over 12,500 views on YouTube© through video case studies.</br>
+				</dd>		<dt>Support</dt>
 				<dd>
 					&bull; Processed billing for top Rackspace account with $1.8M MRR.</br>
 					&bull; Achieved Net Promoter Score of 78 across customer base for 2016.</br>
@@ -29,20 +43,6 @@
 					&bull; Deployed $30,000 enterprise-class server for corporate ERP solution.</br>
 					&bull; Increased phone/voicemail capacity by 50% by installing new system.</br>
 					&bull; Managed an audio/video team at four annual customer conferences.</br>
-				</dd>
-		<dt>Sales and Marketing</dt>
-				<dd>
-					&bull; Work closely with sales to ensure customer expectations and outcomes are met.</br>
-					&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.</br>
-					&bull; Attended two Rackspace::SOLVE events engaging with over 30 attendees per event.</br>
-				</dd>
-		<dt>Content Creation and Delivery</dt>
-				<dd>
-					&bull; Developed & presented training about Cloud Launch to over 150 Rackers.</br>
-					&bull; Created 11+ screencasts to assist with Cloud customer onboarding.</br>
-					&bull; Streamed 200+ hours of e-Learning content using L.M.S.</br>
-					&bull; Reduced website budget by 90% though the use of open source tools.</br>
-					&bull; Achieved over 12,500 views on YouTube© through video case studies.</br>
 				</dd>
 	</dl>	 
 </body>
