--- a/resume/index.html
+++ b/resume/index.html
@@ -635,7 +635,7 @@ dl em {
 			<h2>Senior Customer Success Manager</h2>
 
 			<blockquote>
-			  bill@hertzing.com | billhertzing.com<br />
+			  bill@hertzing.com<br />
 			  +1 (512) 394-3556<br /></p>
 			</blockquote>
 			<hr />
@@ -655,9 +655,9 @@ dl em {
 				<ol>
 					<li>Cloud Servers</li>
 					<li>Desktop Support</li>
-					<li>Enterprise Technology</li>
+					<li>Quote Manager</li>
 					<li>Project Management</li>
-					<li>Migraion Coordination</li>
+					<li>Mindtickle</li>
 					<li>Customer Support</li>
 				</ol>
 			<hr />
@@ -696,6 +696,8 @@ dl em {
                                 <dt>Rackspace US, Inc.</dt>
                                         <dd><em>Senior Technical Account Manager</em>
                                         <strong>Feb 2017 – Feb 2021</strong>
+        <dt>Rackspace US, Inc.</dt>
+          <dd><em>Program Manager III</em>
 				<dt>Rackspace US, Inc.</dt>
 					<dd><em>Cloud Launch Manager</em>
 					<strong>Jan 2013 – Feb 2017</strong>
@@ -706,8 +708,6 @@ dl em {
 					<dd><em>Windows Cloud Administrator</em>
 					<strong>Feb 2012 – July 2012</strong>
 				<dt>SBTI, San Marcos, TX</dt>
-					<dd><em>Technology Manager</em>
-					<strong>2002 – 2011</strong>
 				</dd>
 			</dl>
 		</div>
