--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -11,7 +11,7 @@
 				<dd>
 					&bull; Facilitated 12 cohorts per year with 8-15 students in each cohort.</br>
 					&bull; Work closely with sales to ensure customer expectations and outcomes are met.</br>
-					&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.</br>
+					&bull; Developed internal SharePoint site for Customer Success Enablement.</br>
 					&bull; Attended two Rackspace::SOLVE events engaging with over 30 attendees per event.</br>
 				</dd>
 		<dt>Content Creation and Delivery</dt>
@@ -19,7 +19,7 @@
 					&bull; Published to Mindtickle Customer Success and Seller content monthly.</br>
 					&bull; Developed & presented training about Cloud Launch to over 150 Rackers.</br>
 					&bull; Created 11+ screencasts to assist with Cloud customer onboarding.</br>
-					&bull; Streamed 200+ hours of e-Learning content using L.M.S.</br>
+					&bull; Created 3-5 new content modules for Customer Success on a monthly basis.</br>
 					&bull; Achieved over 12,500 views on YouTube© through video case studies.</br>
 				</dd>		<dt>Support</dt>
 				<dd>
