--- a/resume/index.html
+++ b/resume/index.html
@@ -676,7 +676,7 @@ dl em {
 				<dt>ITIL® Foundation Certificate in IT Service Management</dt>
 					<dd><em>CSME, Inc.</em>
 					<strong>November 2012</strong></dd>
-				<dt>CloudU</dt>
+				<dt>FAIR AI-Ready Credly Badge</dt>
 			</dl>
 			<hr />
 			<h3 id="strengths">Gallup<br>Strengths</h3>
