--- a/resume/index.html
+++ b/resume/index.html
@@ -632,7 +632,7 @@ dl em {
 	<div class="container">
 		<div class="resume">
 			<h1>Bill Hertzing</h1>
-			<h2>Senior Customer Success Manager</h2>
+			<h2>Program Manager III | Global CS Enablement</h2>
 
 			<blockquote>
 			  bill@hertzing.com<br />
