--- a/resume/index.html
+++ b/resume/index.html
@@ -653,11 +653,12 @@ dl em {
 			<hr />
 			<h3 id="technical">Technical</h3>
 				<ol>
+          <li>Mindtickle</li>
 					<li>Cloud Servers</li>
 					<li>Desktop Support</li>
 					<li>Quote Manager</li>
 					<li>Project Management</li>
-					<li>Mindtickle</li>
+					<li>Camtasia</li>
 					<li>Customer Support</li>
 				</ol>
 			<hr />
