--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bill Hertzing | Senior Customer Success Manager</title>
+  <title>Bill Hertzing | Program Manager III | CS Enablement</title>
 <style type="text/css">
 
 
