--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -7,43 +7,43 @@
 <body>
 <h3>Achievements</h3>
 	<dl>
-		<dt>Sales and Marketing</dt>
+		<dt>Sales & Customer Success</dt>
 				<dd>
 					&bull; Facilitated 12 cohorts per year with 8-15 students in each cohort.</br>
-					&bull; Work closely with sales to ensure customer expectations and outcomes are met.</br>
-					&bull; Developed internal SharePoint site for Customer Success Enablement.</br>
+					&bull; Present best practice information at Customer Success Council meetings.</br>
+					&bull; ***TOPIC***</br>
 					&bull; Attended two Rackspace::SOLVE events engaging with over 30 attendees per event.</br>
 				</dd>
 		<dt>Content Creation and Delivery</dt>
 				<dd>
-					&bull; Published to Mindtickle Customer Success and Seller content monthly.</br>
-					&bull; Developed & presented training about Cloud Launch to over 150 Rackers.</br>
-					&bull; Created 11+ screencasts to assist with Cloud customer onboarding.</br>
+					&bull; Published to Mindtickle Customer Success and Seller content monthly.</br>	
+					&bull; Developed internal SharePoint site for Customer Success Enablement.</br>
 					&bull; Created 3-5 new content modules for Customer Success on a monthly basis.</br>
-					&bull; Achieved over 12,500 views on YouTube© through video case studies.</br>
-				</dd>		<dt>Support</dt>
+					&bull; Managed pipeline of deliverables for both customer success and sellers.</br>					
+					&bull; Proficient use of PowerPoint & Camtasia for full motion video delivery.</br>		
+				</dd>		
+		<dt>Support</dt>
 				<dd>
+					&bull; Administer users in Mindtickle in accordance with leadership requests.</br>	
+					&bull; Delivered key learning (SFDC, QM) for all new sellers. </br>
+					&bull; Coach both sellers and customer success on presentation skills</br>	
 					&bull; Processed billing for top Rackspace account with $1.8M MRR.</br>
-					&bull; Achieved Net Promoter Score of 78 across customer base for 2016.</br>
-					&bull; Fulfilled 100% closed loop responses for customer service level agreements.</br>
-					&bull; Provided Fanatical Support to customers and Rackers via Teams & phone.</br>
-					&bull; Advised nationally syndicated cloud accounts in handling over 140k hits/min.</br>
 				</dd>
-		<dt>Disaster Recovery, Backup and Retention</dt>
+		<dt>Communication</dt>
 				<dd>
-					&bull; Captured over $2,000,000 of intellectual property using virtual machines.</br>
-					&bull; Reduced CSM's burden by developing Credit Calculator for Cloud.</br>
-					&bull; Eliminated 99.9% risk of outmoded hardware failure using virtual machines.</br>
-					&bull; Advised customers on backup and recovery using 100% cloud services.</br>
-					&bull; Protected over $100,000 of intellectual property in one chartered project.</br>
+					&bull; Delivered Custom & Self-Serve Mindtickle analytics reports to leaders.</br>
+					&bull; Reported learner progress to respected leadership with next step recommendations.</br>
+					&bull; ***TOPIC***</br>
+					&bull; Communicate account status to C-Suite members in a concise manner.</br>
 				</dd>
-		<dt>Communication and Coordination</dt>
+		<dt>Coordination</dt>
 				<dd>
-					&bull; Moved 200+ email accounts to MS Exchange© in under 30 days.</br>
-					&bull; Deployed $30,000 enterprise-class server for corporate ERP solution.</br>
-					&bull; Increased phone/voicemail capacity by 50% by installing new system.</br>
-					&bull; Managed an audio/video team at four annual customer conferences.</br>
+					&bull; Leverage SharePoint Lists as a project tracker for leadership.</br>
+					&bull; ***TOPIC***</br>
+					&bull; ***TOPIC***</br>
+					&bull; ***TOPIC***</br>
 				</dd>
+
 	</dl>	 
 </body>
 </html>
