--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -39,7 +39,7 @@
 		<dt>Coordination</dt>
 				<dd>
 					&bull; Leverage SharePoint Lists as a project tracker for leadership.</br>
-					&bull; ***TOPIC***</br>
+					&bull; Continuously work with senior CSMs for content insight and feedback.</br>
 					&bull; ***TOPIC***</br>
 					&bull; ***TOPIC***</br>
 				</dd>
