--- a/resume/index.html
+++ b/resume/index.html
@@ -635,8 +635,7 @@ dl em {
 			<h2>Program Manager III | Global CS Enablement</h2>
 
 			<blockquote>
-			  bill@hertzing.com<br />
-			  +1 (512) 394-3556<br /></p>
+			  bill.hertzing@rackspace.com<br /></p>
 			</blockquote>
 			<hr />
 				<div id="objective-statement">
