--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -9,39 +9,37 @@
 	<dl>
 		<dt>Sales & Customer Success</dt>
 				<dd>
-					&bull; Facilitated 12 cohorts per year with 8-15 students in each cohort.</br>
-					&bull; Present best practice information at Customer Success Council meetings.</br>
-					&bull; ***TOPIC***</br>
-					&bull; Attended two Rackspace::SOLVE events engaging with over 30 attendees per event.</br>
+					&bull; Led 12 annual cohorts, each comprising 8-15 students.</br>
+					&bull; Delivered industry-leading best practices during Customer Success Council meetings.</br>
+					&bull; Attended two Rackspace::SOLVE events engaging with over 30 attendees per event. (CSM)</br>
 				</dd>
 		<dt>Content Creation and Delivery</dt>
 				<dd>
-					&bull; Published to Mindtickle Customer Success and Seller content monthly.</br>	
-					&bull; Developed internal SharePoint site for Customer Success Enablement.</br>
-					&bull; Created 3-5 new content modules for Customer Success on a monthly basis.</br>
-					&bull; Managed pipeline of deliverables for both customer success and sellers.</br>					
-					&bull; Proficient use of PowerPoint & Camtasia for full motion video delivery.</br>		
+					&bull; Monthly publication of Customer Success and Seller content to Mindtickle.</br>
+					&bull; Revamped learning materials around churn prevention and renewals.</br>
+					&bull; Designed and implemented an internal SharePoint site to enhance Customer Success Enablement.</br>
+					&bull; Produced 3-5 monthly content modules for Customer Success.</br>
+					&bull; Managed pipeline of deliverables for both customer success and sellers.</br>
+					&bull; Oversaw deliverables pipeline for Customer Success and Sales teams.</br>		
 				</dd>		
 		<dt>Support</dt>
 				<dd>
-					&bull; Administer users in Mindtickle in accordance with leadership requests.</br>	
-					&bull; Delivered key learning (SFDC, QM) for all new sellers. </br>
-					&bull; Coach both sellers and customer success on presentation skills</br>	
-					&bull; Processed billing for top Rackspace account with $1.8M MRR.</br>
+					&bull; Managed user administration in Mindtickle, aligning with leadership directives.</br>	
+					&bull; Provided essential training in SFDC and QM to onboard all new sellers.</br>
+					&bull; Coached sellers and customer success teams in communication and presentation skills.</br>
+					&bull; Processed billing for top Rackspace account with $1.8M MRR. (CSM)</br>
 				</dd>
 		<dt>Communication</dt>
 				<dd>
-					&bull; Delivered Custom & Self-Serve Mindtickle analytics reports to leaders.</br>
-					&bull; Reported learner progress to respected leadership with next step recommendations.</br>
-					&bull; ***TOPIC***</br>
-					&bull; Communicate account status to C-Suite members in a concise manner.</br>
+					&bull; Provided custom Mindtickle analytics reports to leaders with accompanying runbooks.</br>
+					&bull; Provided learner progress reports to leadership with actionable recommendations.</br>
+					&bull; Conveyed account status succinctly to C-Level executives. (CSM)</br>
 				</dd>
 		<dt>Coordination</dt>
 				<dd>
-					&bull; Leverage SharePoint Lists as a project tracker for leadership.</br>
-					&bull; Continuously work with senior CSMs for content insight and feedback.</br>
-					&bull; ***TOPIC***</br>
-					&bull; ***TOPIC***</br>
+					&bull; Utilized SharePoint Lists as a leadership project tracker.</br>
+					&bull; Collaborated with senior CSMs for continuous content insights and feedback.</br>
+					&bull; Utilized existing relationships with internal departments to develop targeted enablement.</br>
 				</dd>
 
 	</dl>	 
