Added soft skills

--- a/resume/index.html
+++ b/resume/index.html
@@ -661,6 +661,17 @@ dl em {
 					<li>Customer Support</li>
 				</ol>
 			<hr />
+      <h3 id="technical">Non-Technical</h3>
+        <ol>
+          <li>Coaching</li>
+          <li>Communication</li>
+          <li>Presentation</li>
+          <li>Organization</li>
+          <li>Problem Solving</li>
+          <li>Teamwork</li>
+          <li>Adaptability</li>
+        </ol>
+      <hr />      
 			<h3 id="education">Education</h3>
 			<dl>
 				<dt>University of North Texas</dt>
