--- a/resume/index.html
+++ b/resume/index.html
@@ -659,6 +659,7 @@ dl em {
 					<li>Project Management</li>
 					<li>Camtasia</li>
 					<li>Customer Support</li>
+          <li>Artificial Intelligence</li>          
 				</ol>
 			<hr />
       <h3 id="technical">Non-Technical</h3>
