--- a/resume/index.html
+++ b/resume/index.html
@@ -679,7 +679,7 @@ dl em {
 				<dd><em>Music Composition</em>
 				<strong>1993 - 1998</strong></dd>
 				<dt>Houston Community College</dt>
-				<dd><em>Music Music Theory</em>
+				<dd><em>Music Theory</em>
 				<strong>1990 - 1993</strong></dd>
 			</dl>
 			<hr />
@@ -689,6 +689,7 @@ dl em {
 					<dd><em>CSME, Inc.</em>
 					<strong>November 2012</strong></dd>
 				<dt>FAIR AI-Ready Credly Badge</dt>
+          <strong>July 2023</strong></dd>
 			</dl>
 			<hr />
 			<h3 id="strengths">Gallup<br>Strengths</h3>
