--- a/resume/index.html
+++ b/resume/index.html
@@ -688,7 +688,8 @@ dl em {
 				<dt>ITIL® Foundation Certificate in IT Service Management</dt>
 					<dd><em>CSME, Inc.</em>
 					<strong>November 2012</strong></dd>
-				<dt>FAIR AI-Ready Credly Badge</dt>
+				<dt>FAIR AI-Ready Badge</dt>
+          <dd><em>Credly</em>
           <strong>July 2023</strong></dd>
 			</dl>
 			<hr />
