--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -33,6 +33,7 @@
 				<dd>
 					&bull; Provided custom Mindtickle analytics reports to leaders with accompanying runbooks.</br>
 					&bull; Provided learner progress reports to leadership with actionable recommendations.</br>
+					&bull; Presented a comprehensive update on the status of our customer success program to the CEO, highlighting key performance indicators and strategic insights.</br>
 					&bull; Conveyed account status succinctly to C-Level executives. (CSM)</br>
 				</dd>
 		<dt>Coordination</dt>
