--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -19,7 +19,7 @@
 					&bull; Revamped learning materials around churn prevention and renewals.</br>
 					&bull; Designed and implemented an internal SharePoint site to enhance Customer Success Enablement.</br>
 					&bull; Produced 3-5 monthly content modules for Customer Success.</br>
-					&bull; Managed pipeline of deliverables for both customer success and sellers.</br>
+					&bull; Managed pipeline of enablement deliverables for both customer success and sellers.</br>
 				</dd>		
 		<dt>Support</dt>
 				<dd>
