--- a/building-blocks-of-blue.html
+++ b/building-blocks-of-blue.html
@@ -73,9 +73,8 @@
 <p>So, I asked Angela for an idea and she said, "a blues song about building LEGO sets like pieces breaking or having to redo the build"</p>
 <p><a href="https://suno.com/song/a058aa23-03e2-4cf9-bfc6-3ff7104f6183]" target="_blank">Building Blocks of Blue</a></p>
 <p>This was done so well, here is the remix I did with guitars and more.</p>
-<iframe width="767" height="431" src="https://youtu.be/ZCrw9T1fZ1E" frameborder="0" allowfullscreen></iframe>
-
-<p><br></p></div>
+<p><br></p>
+<iframe width="767" height="431" src="https://www.youtube.com/embed/ZCrw9T1fZ1E?si=d9tGhTh1wDMCHNLz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
     <footer>
 <p class="meta">
   <span class="byline author vcard">
