--- a/building-blocks-of-blue.html
+++ b/building-blocks-of-blue.html
@@ -71,7 +71,31 @@
 <p><a href="https://suno.com/" target="_blank">https://suno.com/</a></p>
 <p>I am having the most fun with this site.  It takes a prompt and turns it into a song with chord progressions, lyrics, and more. </p>
 <p>So, I asked Angela for an idea and she said, "a blues song about building LEGO sets like pieces breaking or having to redo the build"</p>
-<p><a href="https://suno.com/song/a058aa23-03e2-4cf9-bfc6-3ff7104f6183]" target="_blank">Building Blocks of Blue</a></p>
+<p><a href="https://suno.com/song/a058aa23-03e2-4cf9-bfc6-3ff7104f6183" target="_blank">Building Blocks of Blue</a></p>
+<p>[Verse]
+Brick by brick
+I build this scene
+Lost in a world of plastic dreams
+But sometimes
+It all falls apart
+Every piece breaking
+Breaking my heart</p>
+<p>[Verse 2]
+I follow the instructions
+Step by step
+But there's a twist of fate
+My mind must accept
+Every time I'm close to making it right
+I stumble and trip into the endless night</p>
+<p>[Chorus]
+Oh
+These building blocks of blue
+Building up my pain
+It's true
+But I won't give up
+I'll find my way
+Piece by piece
+I'll build it all someday</p>
 <p>This was done so well, here is the remix I did with guitars and more.</p>
 <p><br></p>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/ZCrw9T1fZ1E?si=d9tGhTh1wDMCHNLz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
