--- a/building-blocks-of-blue.html
+++ b/building-blocks-of-blue.html
@@ -72,33 +72,42 @@
 <p>I am having the most fun with this site.  It takes a prompt and turns it into a song with chord progressions, lyrics, and more. </p>
 <p>So, I asked Angela for an idea and she said, "a blues song about building LEGO sets like pieces breaking or having to redo the build"</p>
 <p><a href="https://suno.com/song/a058aa23-03e2-4cf9-bfc6-3ff7104f6183" target="_blank">Building Blocks of Blue</a></p>
-<p>[Verse]
-Brick by brick
-I build this scene
-Lost in a world of plastic dreams
-But sometimes
-It all falls apart
-Every piece breaking
-Breaking my heart</p>
-<p>[Verse 2]
-I follow the instructions
-Step by step
-But there's a twist of fate
-My mind must accept
-Every time I'm close to making it right
-I stumble and trip into the endless night</p>
-<p>[Chorus]
-Oh
-These building blocks of blue
-Building up my pain
-It's true
-But I won't give up
-I'll find my way
-Piece by piece
-I'll build it all someday</p>
-<p>This was done so well, here is the remix I did with guitars and more.</p>
+<p>[Verse]<br>
+Brick by brick<br>
+I build this scene<br>
+Lost in a world of plastic dreams<br>
+But sometimes<br>
+It all falls apart<br>
+Every piece breaking<br>
+Breaking my heart<br>
+<br>
+[Verse 2]<br>
+I follow the instructions<br>
+Step by step<br>
+But there's a twist of fate<br>
+My mind must accept<br>
+Every time I'm close to making it right<br>
+I stumble and trip into the endless night<br>
+<br>
+[Chorus]<br>
+Oh<br>
+These building blocks of blue<br>
+Building up my pain<br>
+It's true<br>
+But I won't give up<br>
+I'll find my way<br>
+Piece by piece<br>
+I'll build it all someday<br>
+<br>
+This was done so well, here is the remix I did with guitars and more.</p>
 <p><br></p>
-<iframe width="767" height="431" src="https://www.youtube.com/embed/ZCrw9T1fZ1E?si=d9tGhTh1wDMCHNLz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+<iframe width="767" height="431" src="https://www.youtube.com/embed/ZCrw9T1fZ1E?si=d9tGhTh1wDMCHNLz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<p><br></p>
+<p><br></p>
+<iframe src="http://billhertzing.com/_Files_/Building_Blocks_of_Blue.html" width="500"></iframe>
+
+<p><br></p></div>
     <footer>
 <p class="meta">
   <span class="byline author vcard">
