--- a/building-blocks-of-blue.html
+++ b/building-blocks-of-blue.html
@@ -104,7 +104,7 @@ This was done so well, here is the remix I did with guitars and more.</p>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/ZCrw9T1fZ1E?si=d9tGhTh1wDMCHNLz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <p><br>
-<iframe width="767" height="431" src="http://billhertzing.com/_Files_/Building_Blocks_of_Blue.html" title="Audio Player" frameborder="0"></iframe>
+<iframe width="767" height="431" src="http://hertzing.com/Soundboard/dist/index.html" title="Audio Player" frameborder="0"></iframe>
 <br></p></div>
     <footer>
 <p class="meta">
