--- a/building-blocks-of-blue.html
+++ b/building-blocks-of-blue.html
@@ -71,7 +71,9 @@
 <p><a href="https://suno.com/" target="_blank">https://suno.com/</a></p>
 <p>I am having the most fun with this site.  It takes a prompt and turns it into a song with chord progressions, lyrics, and more. </p>
 <p>So, I asked Angela for an idea and she said, "a blues song about building LEGO sets like pieces breaking or having to redo the build"</p>
+<h2>Song Link</h2>
 <p><a href="https://suno.com/song/a058aa23-03e2-4cf9-bfc6-3ff7104f6183" target="_blank">Building Blocks of Blue</a></p>
+<h2>Lyrics (AI Generated)</h2>
 <p>[Verse]<br>
 Brick by brick<br>
 I build this scene<br>
@@ -100,11 +102,10 @@ Piece by piece<br>
 I'll build it all someday<br>
 <br>
 This was done so well, here is the remix I did with guitars and more.</p>
-<p><br></p>
-<iframe width="767" height="431" src="https://www.youtube.com/embed/ZCrw9T1fZ1E?si=d9tGhTh1wDMCHNLz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-<p><br>
-<iframe width="500" height="250" src="https://bill-audio-files.s3.us-west-2.amazonaws.com/Building_Blocks_of_Blue.html" title="Audio Player" frameborder="0"></iframe>
+<h2>Building Blocks of Blue</h2>
+<p><iframe width="767" height="431" src="https://www.youtube.com/embed/ZCrw9T1fZ1E?si=d9tGhTh1wDMCHNLz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+<h2>Bill's Remix</h2>
+<p><iframe width="500" height="250" src="https://bill-audio-files.s3.us-west-2.amazonaws.com/Building_Blocks_of_Blue.html" title="Audio Player" frameborder="0"></iframe>
 <br></p></div>
     <footer>
 <p class="meta">
