AI bookmark updates

--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -71,14 +71,21 @@
 <p>(This is a carry-over from my tech-tips site. Seemed silly managing two sites.)
 Starting a running list of AI links as I start to use the tools more and more. (Updated 04/19/2024)</p>
 <h2>Chat Apps</h2>
+<p>Meta.ai<br>
+<a href="https://meta.ai/" target="_blank">https://meta.ai/</a> - Author of llama LLM.<br></p>
+<p>Copilot
+<a href="https://copilot.microsoft.com/" target="_blank">https://copilot.microsoft.com/</a> - Microsoft's Chat in collaboration with OpenAI.<br></p>
 <p>ChatGPT<br>
 <a href="https://chat.openai.com/" target="_blank">https://chat.openai.com/</a> - Good for using both the chat and API functions<br></p>
 <p>Ollama<br>
 <a href="https://ollama.com/" target="_blank">https://ollama.com/</a> - I use this tool all the time.  Great way to test different Large Language Models (LLM)<br></p>
 <p>OpenWebUI<br>
 <a href="https://openwebui.com/" target="_blank">https://openwebui.com/</a> - Good inspiration for creating profiles modifications for your LLMs.<br></p>
-<p>AnythingLLM <a href="https://useanything.com/" target="_blank">https://useanything.com/</a> is an open-source, customizable, and feature-rich document chatbot designed for intelligent interactions with existing documents. Whether you want to chat intelligently or build knowledge bases using your documents, AnythingLLM has you covered. <br></p>
+<p>AnythingLLM<br> 
+<a href="https://useanything.com/" target="_blank">https://useanything.com/</a> is an open-source, customizable, and feature-rich document chatbot designed for intelligent interactions with existing documents. Whether you want to chat intelligently or build knowledge bases using your documents, AnythingLLM has you covered. <br></p>
 <h2>Music Apps</h2>
+<p>Udio<br>
+<a href="https://www.udio.com/" target="_blank">https://www.udio.com/</a> - One of the best AI music generators out there so far.<br></p>
 <p>Suno<br>
 <a href="https://suno.com/" target="_blank">https://suno.com/</a> - This site creates songs from prompts you feed it with lyrics and chord progressions.  The heavy metal pasta and sauce song, is really creative.<br></p></div>
     <footer>
