--- a/index.html
+++ b/index.html
@@ -179,8 +179,10 @@
 <p>(This is a carry-over from my tech-tips site. Seemed silly managing two sites.)
 Starting a running list of AI links as I start to use the tools more and more. (Updated 04/19/2024)</p>
 <h2>Chat Apps</h2>
-<p>ChatGPT<br>
-<a href="https://chat.openai.com/" target="_blank">https://chat.openai.com/</a> - Good for using both the chat and API functions …</p></div>
+<p>Meta.ai<br>
+<a href="https://meta.ai/" target="_blank">https://meta.ai/</a> - Author of llama LLM.<br></p>
+<p>Copilot
+<a href="https://copilot.microsoft.com/" target="_blank">https://copilot.microsoft.com …</a></p></div>
   <footer>
     <a rel="full-article" href="https://blog.billhertzing.com/ai-bookmarks.html">Read On &crarr;</a>
   </footer>
