enablement content update

--- a/index.html
+++ b/index.html
@@ -179,10 +179,8 @@
 <p>(This is a carry-over from my tech-tips site. Seemed silly managing two sites.)
 Starting a running list of AI links as I start to use the tools more and more. (Updated 04/19/2024)</p>
 <h2>Chat Apps</h2>
-<p>Meta.ai<br>
-<a href="https://meta.ai/" target="_blank">https://meta.ai/</a> - Author of llama LLM.<br></p>
-<p>Copilot
-<a href="https://copilot.microsoft.com/" target="_blank">https://copilot.microsoft.com …</a></p></div>
+<p>Groq Chat<br>
+<a href="https://groq.com/" target="_blank">https://groq.com/</a> - Test llama3:70b - born with the vision of making …</p></div>
   <footer>
     <a rel="full-article" href="https://blog.billhertzing.com/ai-bookmarks.html">Read On &crarr;</a>
   </footer>
