--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -71,6 +71,9 @@
 <p>(This is a carry-over from my tech-tips site. Seemed silly managing two sites.)
 Starting a running list of AI links as I start to use the tools more and more. (Updated 04/19/2024)</p>
 <h2>Chat Apps</h2>
+<p>Groq Chat<br>
+<a href="https://groq.com/" target="_blank">https://groq.com/</a> - Test llama3:70b - born with the vision of making AI accessible for all.<br>
+<a href="https://console.groq.com/playground" target="_blank">https://console.groq.com/playground</a><br></p>
 <p>Meta.ai<br>
 <a href="https://meta.ai/" target="_blank">https://meta.ai/</a> - Author of llama LLM.<br></p>
 <p>Copilot
@@ -83,11 +86,15 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <a href="https://openwebui.com/" target="_blank">https://openwebui.com/</a> - Good inspiration for creating profiles modifications for your LLMs.<br></p>
 <p>AnythingLLM<br> 
 <a href="https://useanything.com/" target="_blank">https://useanything.com/</a> is an open-source, customizable, and feature-rich document chatbot designed for intelligent interactions with existing documents. Whether you want to chat intelligently or build knowledge bases using your documents, AnythingLLM has you covered. <br></p>
+<p>Taskade<br>
+<a href="https://www.taskade.com/" target="_blank">https://www.taskade.com/</a> - Create different chat agents.<br></p>
 <h2>Music Apps</h2>
 <p>Udio<br>
 <a href="https://www.udio.com/" target="_blank">https://www.udio.com/</a> - One of the best AI music generators out there so far.<br></p>
 <p>Suno<br>
-<a href="https://suno.com/" target="_blank">https://suno.com/</a> - This site creates songs from prompts you feed it with lyrics and chord progressions.  The heavy metal pasta and sauce song, is really creative.<br></p></div>
+<a href="https://suno.com/" target="_blank">https://suno.com/</a> - This site creates songs from prompts you feed it with lyrics and chord progressions.  The heavy metal pasta and sauce song, is really creative.<br></p>
+<p>ChordSeqAI<br>
+<a href="https://chordseqai.com/app" target="_blank">https://chordseqai.com/app</a> - Chord suggestion app<br></p></div>
     <footer>
 <p class="meta">
   <span class="byline author vcard">
