--- a/enablement-examples.html
+++ b/enablement-examples.html
@@ -83,8 +83,11 @@
 <p>Control Panel: Create a Ticket<br>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/LK4J3KhK_ok?si=i6IKcwfEL3_8IWB_" frameborder="0" allowfullscreen></iframe><br></p>
 <h2>Technnical Training / Walkthroughs</h2>
-<p>Installation of Task Warrior
+<p>Installation of Task Warrior<br>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/3iyaS5WwcuQ?si=E6USjBXRET1iRp_L" frameborder="0" allowfullscreen></iframe><br></p>
+<h2>Panel Discussion</h2>
+<p>Getting Started with Rackspace Managed Cloud<br>
+<iframe width="767" height="431" src="https://www.youtube.com/embed/hFdrj0Gair0?si=Ychg7CgcBtmJlkYS" frameborder="0" allowfullscreen></iframe><br></p>
 <h2>Team Culture</h2>
 <p>Rackspace Video Challenge - HSD SMB - Can't Stop the Feeling!<br>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/S0zTm7l6FDs?si=CnCPP_3UVSeZgzOI" frameborder="0" allowfullscreen></iframe><br></p></div>
