AI Bookmark update

--- a/enablement-examples.html
+++ b/enablement-examples.html
@@ -88,6 +88,8 @@
 <h2>Panel Discussion</h2>
 <p>Getting Started with Rackspace Managed Cloud<br>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/hFdrj0Gair0?si=Ychg7CgcBtmJlkYS" frameborder="0" allowfullscreen></iframe><br></p>
+<p>Cloud Application Architecture Trends for 2015 and Beyond<br>
+<iframe width="767" height="431" src="https://www.youtube.com/embed/2SvEewYysuA?si=-Np2KOSvHXwNN52r" frameborder="0" allowfullscreen></iframe><br></p>
 <h2>Team Culture</h2>
 <p>Rackspace Video Challenge - HSD SMB - Can't Stop the Feeling!<br>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/S0zTm7l6FDs?si=CnCPP_3UVSeZgzOI" frameborder="0" allowfullscreen></iframe><br></p></div>
