--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -88,6 +88,8 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <a href="https://useanything.com/" target="_blank">https://useanything.com/</a> is an open-source, customizable, and feature-rich document chatbot designed for intelligent interactions with existing documents. Whether you want to chat intelligently or build knowledge bases using your documents, AnythingLLM has you covered. <br></p>
 <p>Taskade<br>
 <a href="https://www.taskade.com/" target="_blank">https://www.taskade.com/</a> - Create different chat agents.<br></p>
+<p>Perplexity<br>
+<a href="https://www.perplexity.ai/" target="_blank">https://www.perplexity.ai/</a> - A conversational search engine that answers queries using natural language predictive text, utilizing sources from the web.<br></p>
 <h2>Music Apps</h2>
 <p>Udio<br>
 <a href="https://www.udio.com/" target="_blank">https://www.udio.com/</a> - One of the best AI music generators out there so far.<br></p>
