--- a/enablement-examples.html
+++ b/enablement-examples.html
@@ -75,15 +75,15 @@
 <li><a href="https://blog.billhertzing.com/the-art-of-decoupled-technology.html">The Art of Decoupled Technology</a></li>
 </ul>
 <h2>Bespoke Customer Engagement Video</h2>
-<p>Customer Engagement<br>
+<p>Customer Engagement - In the past, I have sent custom videos to customers about certain things.  In this case, I sent the customer a survey in an email but wanted them know the link was safe to click on.<br>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/9tSkc0XG_qM?si=zEvnEe5RUr___yf1" frameborder="0" allowfullscreen></iframe><br></p>
 <h2>eLearning / Enablement Content</h2>
-<p>Content Delivery Network (CDN) Illustration<br>
+<p>Content Delivery Network (CDN) Illustration - In this video I demonstrate how a CDN works in very basic terms.  This is an older video (2017) and my tools and techniques have expanded since this recording.<br>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/IJNq_8CXv_k?si=mhIOhTEFTInLVjHK" frameborder="0" allowfullscreen></iframe><br></p>
-<p>Control Panel: Create a Ticket<br>
+<p>Control Panel: Create a Ticket - This is one part of the screencast series that I authored to show new customers various parts of their portal.  I would make these videos available via ticket for the customer to view when they could.<br>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/LK4J3KhK_ok?si=i6IKcwfEL3_8IWB_" frameborder="0" allowfullscreen></iframe><br></p>
 <h2>Technnical Training / Walkthroughs</h2>
-<p>Installation of Task Warrior<br>
+<p>Installation of Task Warrior - Taskwarrior was an early tool I used before SharePoint to track customer engagement.  I created this video series to share with others on how to use the tool.<br>
 <iframe width="767" height="431" src="https://www.youtube.com/embed/3iyaS5WwcuQ?si=E6USjBXRET1iRp_L" frameborder="0" allowfullscreen></iframe><br></p>
 <h2>Panel Discussion</h2>
 <p>Getting Started with Rackspace Managed Cloud<br>
