add prompts to ai bookmark

--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -97,7 +97,10 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <p>You.com<br>
 <a href="https://you.com/" target="_blank">https://you.com/</a> -  A search engine that uses artificial intelligence (AI) to provide personalized results.<br></p>
 <p>LMSys.org<br>
-<a href="https://chat.lmsys.org/" target="_blank">https://chat.lmsys.org/</a> -  Directly chat and test various LLMs</p>
+<a href="https://chat.lmsys.org/" target="_blank">https://chat.lmsys.org/</a> - Directly chat and test various LLMs. <br></p>
+<h2>Prompts</h2>
+<p>Prompts at OpenWebUI.com
+<a href="https://openwebui.com/prompts?query=" target="_blank">https://openwebui.com/prompts?query=</a> - Ideas and inspirations for how to craft prompts for ChatGPTs.</p>
 <h2>Music Apps</h2>
 <p>Udio<br>
 <a href="https://www.udio.com/" target="_blank">https://www.udio.com/</a> - One of the best AI music generators out there so far.<br></p>
