update to ai bookmark

--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -84,8 +84,6 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <a href="https://ollama.com/" target="_blank">https://ollama.com/</a> - I use this tool all the time.  Great way to test different Large Language Models (LLM)<br></p>
 <p>OpenWebUI<br>
 <a href="https://openwebui.com/" target="_blank">https://openwebui.com/</a> - Good inspiration for creating profiles modifications for your LLMs.<br></p>
-<p>AnythingLLM<br> 
-<a href="https://useanything.com/" target="_blank">https://useanything.com/</a> is an open-source, customizable, and feature-rich document chatbot designed for intelligent interactions with existing documents. Whether you want to chat intelligently or build knowledge bases using your documents, AnythingLLM has you covered. <br></p>
 <p>Taskade<br>
 <a href="https://www.taskade.com/" target="_blank">https://www.taskade.com/</a> - Create different chat agents.<br></p>
 <p>Perplexity<br>
@@ -98,8 +96,11 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <a href="https://you.com/" target="_blank">https://you.com/</a> -  A search engine that uses artificial intelligence (AI) to provide personalized results.<br></p>
 <p>LMSys.org<br>
 <a href="https://chat.lmsys.org/" target="_blank">https://chat.lmsys.org/</a> - Directly chat and test various LLMs. <br></p>
+<h2>GUI Interfaces</h2>
 <p>MSTY<br>
-<a href="https://msty.app/" target="_blank">https://msty.app/</a> - A very easy to use GUI interface for local and online LLM models.</p>
+<a href="https://msty.app/" target="_blank">https://msty.app/</a> - A very easy to use GUI interface for local and online LLM models.<br></p>
+<p>AnythingLLM<br> 
+<a href="https://useanything.com/" target="_blank">https://useanything.com/</a> is an open-source, customizable, and feature-rich document chatbot designed for intelligent interactions with existing documents. Whether you want to chat intelligently or build knowledge bases using your documents, AnythingLLM has you covered. <br></p>
 <h2>Prompts</h2>
 <p>Prompts at OpenWebUI.com
 <a href="https://openwebui.com/prompts?query=" target="_blank">https://openwebui.com/prompts?query=</a> - Ideas and inspirations for how to craft prompts for ChatGPTs.</p>
