add to ai bookmarks

--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -71,6 +71,8 @@
 <p>(This is a carry-over from my tech-tips site. Seemed silly managing two sites.)
 Starting a running list of AI links as I start to use the tools more and more. (Updated 05/01/2024)</p>
 <h2>Chat Apps</h2>
+<p>Gemini<br>
+<a href="https://gemini.google.com/app" target="_blank">https://gemini.google.com/app</a> - Google's most capable AI model widely available today, 1.0 Ultra<br></p>
 <p>Pinokio<br>
 <a href="https://pinokio.computer/" target="_blank">https://pinokio.computer/</a> - Install, run, &amp; control anything on your computer with 1 click.<br></p>
 <p>RAG<br>
