--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ If you are on this page, it is probably because I filled out a job application f
 <p>(This is a carry-over from my tech-tips site. Seemed silly managing two sites.)
 Starting a running list of AI links as I start to use the tools more and more. (Updated 05/01/2024)</p>
 <h2>Chat Apps</h2>
-<p>Pinokio<br>
-<a href="https://pinokio.computer/" target="_blank">https://pinokio.computer/</a> - Install, run, &amp; control anything on your computer with 1 click …</p></div>
+<p>Gemini<br>
+<a href="https://gemini.google.com/app" target="_blank">https://gemini.google.com/app</a> - Google's most capable AI model widely available today …</p></div>
   <footer>
     <a rel="full-article" href="https://blog.billhertzing.com/ai-bookmarks.html">Read On &crarr;</a>
   </footer>
