--- a/ai-bookmarks.html
+++ b/ai-bookmarks.html
@@ -87,7 +87,8 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <p>ChatGPT<br>
 <a href="https://chat.openai.com/" target="_blank">https://chat.openai.com/</a> - Good for using both the chat and API functions<br></p>
 <p>Ollama<br>
-<a href="https://ollama.com/" target="_blank">https://ollama.com/</a> - I use this tool all the time.  Great way to test different Large Language Models (LLM)<br></p>
+<a href="https://ollama.com/" target="_blank">https://ollama.com/</a> - I use this tool all the time.  Great way to test different Large Language Models (LLM)<br>
+Stopping Ollama via command line on a Mac 'sudo pkill -9 ollama Ollama'</p>
 <p>OpenWebUI<br>
 <a href="https://openwebui.com/" target="_blank">https://openwebui.com/</a> - Good inspiration for creating profiles modifications for your LLMs.<br></p>
 <p>Taskade<br>
@@ -108,7 +109,7 @@ Starting a running list of AI links as I start to use the tools more and more. (
 <p>AnythingLLM<br> 
 <a href="https://useanything.com/" target="_blank">https://useanything.com/</a> is an open-source, customizable, and feature-rich document chatbot designed for intelligent interactions with existing documents. Whether you want to chat intelligently or build knowledge bases using your documents, AnythingLLM has you covered. <br></p>
 <p>Page Assist<br>
-<a href="https://chromewebstore.google.com/detail/page-assist-a-web-ui-for/jfgfiigpkhlkbnfnbobbkinehhfdhndo?pli=1" target="_blank">https://chromewebstore.google.com/detail/page-assist-a-web-ui-for/jfgfiigpkhlkbnfnbobbkinehhfdhndo?pli=1</a> - Page assist is a Chrome/Firefox/Brave/and others extension where you can use it to chat as a stand-alone GUI or you can load it in your sidebar and have it research a page in your browser for you.</p>
+<a href="https://chromewebstore.google.com/detail/page-assist-a-web-ui-for/jfgfiigpkhlkbnfnbobbkinehhfdhndo?pli=1" target="_blank">https://chromewebstore.google.com/detail/page-assist-a-web-ui-for/jfgfiigpkhlkbnfnbobbkinehhfdhndo?pli=1</a> - Page assist is a Chrome/Firefox/Brave/and others extension where you can use it to chat as a stand-alone GUI or you can load it in your sidebar and have it research a page in your browser for you. Also see <a href="https://pageassist.xyz/">https://pageassist.xyz/</a>.</p>
 <h2>Prompts</h2>
 <p>Prompts at OpenWebUI.com
 <a href="https://openwebui.com/prompts?query=" target="_blank">https://openwebui.com/prompts?query=</a> - Ideas and inspirations for how to craft prompts for ChatGPTs.</p>
